--- a/cardinal-mockup/src/scss/App.scss
+++ b/cardinal-mockup/src/scss/App.scss
@@ -1,9 +1,3 @@
-body {
-  background-color: red;
-  color: black;
-}
-
-/* @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-} */
+@import './base/base.scss';
+@import './layout/header.scss';
+@import './layout/solutions.scss';
