--- a/cardinal-mockup/src/scss/App.scss
+++ b/cardinal-mockup/src/scss/App.scss
@@ -1,3 +1,5 @@
 @import './base/base.scss';
 @import './layout/header.scss';
 @import './layout/solutions.scss';
+@import './layout/clients.scss';
+@import './layout/work.scss';
