--- a/cardinal-mockup/src/scss/Home.scss
+++ b/cardinal-mockup/src/scss/Home.scss
@@ -3,3 +3,5 @@
 @import './layout/solutions.scss';
 @import './layout/clients.scss';
 @import './layout/work.scss';
+@import './layout/connect.scss';
+@import './layout/footer.scss';
