--- a/cardinal-mockup/src/scss/layout/work.scss
+++ b/cardinal-mockup/src/scss/layout/work.scss
@@ -3,16 +3,10 @@
 
 .work {
     background-color: #e9e9e9;
+    @include letter-spacing;
     article {
         @include flexbox-column;
         padding: 30px 0;
-        h3 {
-            margin: 20px auto;
-        }
-        h4 {
-            text-transform: uppercase;
-            margin: 0 auto;
-        }
     }
     img {
         @include width-90;
@@ -21,20 +15,33 @@
         @include width-80;
         color: #fff;
         h3 {
-            font-family: $font-extra-bold;
+            margin: 30px auto 5px auto;
+            font-family: $font-regular;
             letter-spacing: 1px;
+            font-size: $font-large;
+            line-height: 1.1em;
+        }
+        h4 {
+            text-transform: uppercase;
+            margin: 0 auto;
+            font-family: $font-regular;
+            font-size: $font-xsmall;
         }
         button {
             @include button-white;
+            margin: 15px auto;
         }
     }
     .work-gojo {
         background-image: $gojo-background;
         @include background-image-properties;
         background-position: 30% 70%;
+        h3 {
+            font-family: $font-bold;
+        }
         h3,
         h4 {
-            color: #18203d;
+            color: $dark-blue;
         } 
         p {
             color: #656565;
@@ -46,17 +53,25 @@
     .work-fifththird {
         background-image: $fifththird-background;
         @include background-image-properties;
-        background-position: 30% 70%; 
+        background-color: #314150;
+        background-position: 12% 50%; 
         @include align-center;
+        padding: 60px 0 40px 0;
+        img {
+            width: 100%;
+        }
+        p {
+            margin: 30px auto;
+        }
     }
     .work-chhn {
         background-image: $chhn-background;
         @include background-image-properties;
-        background-position: 30% 70%; ;
+        background-position: 80% 100%;
         img {
-            margin: 0 0 0 25%;
+            margin: 0 0 0 15%;
+            width: 100%;
         }
-        max-width: 100;
         overflow: hidden;
     }
 }
