--- a/cardinal-mockup/src/scss/partials/_mixins.scss
+++ b/cardinal-mockup/src/scss/partials/_mixins.scss
@@ -32,7 +32,7 @@
 
 // letter-spacing
 @mixin letter-spacing {
-    letter-spacing: .5px;
+    letter-spacing: .9px;
     line-height: 1.5em;
 }
 
@@ -52,14 +52,18 @@
     background-color: #fff;
     border-radius: 4px;
     border: none;
-    padding: 12px 30px;
+    padding: 15px 30px;
+    letter-spacing: .3px;
     font-family: $font-bold;
+    font-size: $font-small;
 }
 @mixin button-blue {
     color: #fff;
     background-color: #0085d9;
     border-radius: 4px;
     border: none;
-    padding: 12px 30px;
+    padding: 15px 30px;
+    letter-spacing: .3px;
     font-family: $font-bold;
+    font-size: $font-small;
 }
