--- a/cardinal-mockup/src/scss/base/base.scss
+++ b/cardinal-mockup/src/scss/base/base.scss
@@ -2,8 +2,12 @@
 
 body {
 	margin: 0;
-	color: #4e4e4e;
+  color: #4e4e4e;
 	font-family: Effra-Light;
+}
+
+p {
+  text-shadow: 0px 0px #4e4e4e;
 }
   
 img {
