--- a/cardinal-mockup/src/scss/layout/connect.scss
+++ b/cardinal-mockup/src/scss/layout/connect.scss
@@ -6,7 +6,7 @@
     @include align-center;
     @include flexbox-column;
     letter-spacing: .3px;
-    line-height: 1.4em;
+    line-height: 1.5em;
     padding: 30px 0 10px 0;
     .connect-info {
         // border-bottom: 1px solid gray;
@@ -16,8 +16,8 @@
         h3 {
             margin: 20px auto 0 auto;
             color: $dark-blue;
-            font-family: $font-regular;
             font-size: 1.65em;
+            text-shadow: 0px 0px #18203d;
         }
         p {
             margin: 15px auto 30px auto;
@@ -69,6 +69,7 @@
                 margin: 10px auto 10px auto;
                 font-style: normal;
                 font-size: .95em;
+                text-shadow: 0px 0px #4e4e4e;
             }
             iframe {
                 border: 1px solid #a9a9a9;
