--- a/cardinal-mockup/src/scss/layout/header.scss
+++ b/cardinal-mockup/src/scss/layout/header.scss
@@ -4,19 +4,66 @@
 .header {
     background-image: $header-background;
     background-color: #055b99;
-    height: 300px;
+    min-height: 335px;
     @include background-image-properties;
-    background-position: 80% 20%; 
+    background-position: 75% 20%; 
     div {
         @include align-center;
         @include width-90;
-        padding: 40px 0 0 0;
+        padding: 45px 0 0 0;
+        img {
+            width: 10.3em;
+        }
         h2 {
             color: white;
             font-family: $font-regular;
             letter-spacing: 2px;
             line-height: 2em;
-            margin: 40px 0 0 0;
+            margin: 60px 0 0 0;
+            font-size: 1.6em;
+        }
+    }
+}
+
+@include tablet-portrait {
+    .header {
+        min-height: 370px;
+        div {
+            @include align-left;
+            padding: 30px 0 0 0;
+            img {
+                width: 7em;
+            }
+            h2 {
+                @include align-center;
+                @include width-80;
+                line-height: 1.5em;
+                margin: 60px auto 0 auto;
+                font-size: 2.7em;
+            }
+        }
+    }
+}
+
+@include tablet-landscape {
+    .header {
+        min-height: 380px;
+        div {
+            h2 {
+                font-size: 2.9em;
+            }
+        }
+    }
+}
+
+@include desktop {
+    .header {
+        min-height: 410px;
+        div {
+            h2 {
+                font-size: 3.3em;
+                margin: 75px auto 0 auto;
+            }
         }
     }
 }
