--- a/cardinal-mockup/src/scss/layout/solutions.scss
+++ b/cardinal-mockup/src/scss/layout/solutions.scss
@@ -3,17 +3,22 @@
 
 .solutions {
     background-color: #f0f0f0;
-    @include flexbox-column;
     @include align-center;
-    letter-spacing: .3px;
+    letter-spacing: .4px;
     padding: 25px 0 130px 0;
+    div {
+        @include flexbox-column;
+        @include width-90;
         article {
             font-family: $font-light;
             @include width-70;
             padding: 15px 0;
+            img {
+                width: 2.6em;
+            }
             h3 {
                 color: $dark-blue;
-                // font-family: $font-regular;
+                text-shadow: 0px 0px #18203d;
                 font-size: $font-medium;
                 margin: 12px auto;
             }
@@ -21,8 +26,46 @@
                 margin: 0 auto;
                 font-size: $font-xsmall;
                 line-height: 1.5em;
-                // font-family: $font-regular;
             }
         }
 
+    }
+}
+
+@include tablet-portrait {
+    .solutions {
+        padding: 25px 0 70px 0;
+        div {
+            @include flexbox-row;
+            @include width-90;
+            article {
+                @include align-left;
+                padding: 15px 0;
+                margin: 0 5px;
+                img {
+                    width: 1.4em;
+                    float: left;
+
+                }
+                h3 {
+                    font-size: 1.1em;
+                    margin: 0 0 12px 30px;
+                }
+                p {
+                    margin: 0 20px 0 30px;
+                    font-size: .7em;
+                }
+            }
+    
+        }
+    }
+
+}
+
+@include desktop {
+    .solutions {
+        div {
+            @include width-70;
+        }
+    }
 }
