--- a/cardinal-mockup/src/scss/layout/work.scss
+++ b/cardinal-mockup/src/scss/layout/work.scss
@@ -24,12 +24,13 @@
         h4 {
             text-transform: uppercase;
             margin: 0 auto;
-            font-family: $font-regular;
-            font-size: $font-xsmall;
+            font-family: $font-light;
+            font-size: .8em;
         }
         button {
             @include button-white;
             margin: 15px auto;
+            font-family: $font-bold;
         }
     }
     .work-gojo {
@@ -42,6 +43,7 @@
         h3,
         h4 {
             color: $dark-blue;
+            font-family: $font-bold;
         } 
         p {
             color: #656565;
@@ -68,8 +70,11 @@
         background-image: $chhn-background;
         @include background-image-properties;
         background-position: 80% 100%;
+        p {
+            margin: 35px auto 20px auto;
+        }
         img {
-            margin: 0 0 0 15%;
+            margin: 0 0 0 16%;
             width: 100%;
         }
         overflow: hidden;
