--- a/cardinal-mockup/src/scss/partials/_mixins.scss
+++ b/cardinal-mockup/src/scss/partials/_mixins.scss
@@ -1,6 +1,5 @@
 // background image properties 
 @mixin background-image-properties {
-    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -52,9 +51,9 @@
     background-color: #fff;
     border-radius: 4px;
     border: none;
-    padding: 15px 30px;
-    letter-spacing: .3px;
-    font-family: $font-bold;
+    padding: 14px 30px;
+    letter-spacing: .4px;
+    font-family: $font-regular;
     font-size: $font-small;
 }
 @mixin button-blue {
@@ -62,8 +61,30 @@
     background-color: #0085d9;
     border-radius: 4px;
     border: none;
-    padding: 15px 30px;
-    letter-spacing: .3px;
-    font-family: $font-bold;
+    padding: 14px 30px;
+    letter-spacing: .4px;
+    font-family: $font-regular;
     font-size: $font-small;
+}
+
+// media queries
+@mixin mobile-landscape {
+    @media (min-width: $mobile-landscape) {
+      @content;
+    }
+}
+@mixin tablet-portrait {
+    @media (min-width: $tablet-portrait) {
+      @content;
+    }
+}
+@mixin tablet-landscape {
+    @media (min-width: $tablet-landscape) {
+      @content;
+    }
+}
+@mixin desktop {
+    @media (min-width: $desktop) {
+      @content;
+    }
 }
