--- a/cardinal-mockup/src/scss/partials/_variables.scss
+++ b/cardinal-mockup/src/scss/partials/_variables.scss
@@ -10,10 +10,10 @@ $font-bold: Effra-Medium;
 $font-extra-bold: Effra-Bold;
 
 // font-size
-$font-xsmall: .8em;
+$font-xsmall: .85em;
 $font-small: 1em;
 $font-medium: 1.3em;
-$font-large: 1.8em;
+$font-large: 1.7em;
 
 // colors
 $dark-blue: #18203d;
@@ -27,3 +27,15 @@ $header-background: url("../assets/images/pic-hero.png");
 $gojo-background: url("../assets/images/pic-gojo-bg.png");
 $fifththird-background: url("../assets/images/pic-fifththird-bg.png");
 $chhn-background: url("../assets/images/pic-chhn-bg.png");
+
+// ------------------
+// MEDIA QUERIES
+// ------------------
+// mobile portrait
+$mobile-landscape: 576px;
+// tablet portrait
+$tablet-portrait: 760px;
+// tablet landscape
+$tablet-landscape: 992px;
+// desktop
+$desktop: 1200px;
