--- a/cardinal-mockup/src/scss/partials/_mixins.scss
+++ b/cardinal-mockup/src/scss/partials/_mixins.scss
@@ -55,6 +55,15 @@
     letter-spacing: .4px;
     font-family: $font-regular;
     font-size: $font-small;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+    &:hover {
+        background-color: rgba(255, 255, 255, 0.58);
+    }
+    &:focus {
+        background-color: #18203d;
+        color: #fff;
+    }
 }
 @mixin button-blue {
     color: #fff;
@@ -65,6 +74,13 @@
     letter-spacing: .4px;
     font-family: $font-regular;
     font-size: $font-small;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+    &:hover,
+    &:focus {
+        color: #fff;
+        background-color: #02467b;
+    }
 }
 
 // media queries
@@ -85,6 +101,11 @@
 }
 @mixin desktop {
     @media (min-width: $desktop) {
+      @content;
+    }
+}
+@mixin large-desktop {
+    @media (min-width: $large-desktop) {
       @content;
     }
 }
