added comments for clarity

--- a/cardinal-mockup/src/scss/layout/clients.scss
+++ b/cardinal-mockup/src/scss/layout/clients.scss
@@ -46,6 +46,12 @@
     }
 }
 
+/* ----------------------------------
+ media queries for tablets and larger
+---------------------------------- */
+
+// clients layout changes from column to row
+
 @include tablet-portrait {
     .clients {
         .clients-container {
