--- a/cardinal-mockup/src/scss/layout/footer.scss
+++ b/cardinal-mockup/src/scss/layout/footer.scss
@@ -14,6 +14,11 @@
         justify-content: center;
         img {
             margin: 10px 15px;
+            cursor: pointer;
+            transition: all .2s ease-in-out;
+            &:hover {
+                filter: brightness(0) invert(100%);
+            }
         }
     }
 }
