--- a/cardinal-mockup/src/scss/layout/header.scss
+++ b/cardinal-mockup/src/scss/layout/header.scss
@@ -17,10 +17,10 @@
         h2 {
             color: white;
             font-family: $font-regular;
-            letter-spacing: 2px;
+            letter-spacing: .5px;
             line-height: 2em;
             margin: 60px 0 0 0;
-            font-size: 1.6em;
+            font-size: 1.3em;
         }
     }
 }
@@ -29,7 +29,17 @@
  media queries for tablets and larger
 ---------------------------------- */
 
-// title font increases and cardinal logo is moved from center to the top left corner
+@media (min-width: 350px) {
+    .header {
+        div {
+            h2 {
+                font-size: 1.6em;
+            }
+        }
+    }
+}
+
+// title font increases and the cardinal logo is moved from the center to the top left corner of the header
 
 @include tablet-portrait {
     .header {
