--- a/cardinal-mockup/src/scss/layout/connect.scss
+++ b/cardinal-mockup/src/scss/layout/connect.scss
@@ -47,8 +47,8 @@
     }
     .contact-info {
         h4 {
-            font-family: $font-extra-bold;
-            font-size: 1.1em;
+            font-family: $font-bold;
+            font-size: 1.05em;
             color: $dark-blue;
         }
         .contact-person {
@@ -59,7 +59,7 @@
                 margin: 0 auto;
                 font-size: .95em;
                 strong {
-                    font-family: font-extra-bold;
+                    font-family: $font-bold;
                     color: $dark-blue;
                     letter-spacing: 1px;
                 }
@@ -85,7 +85,7 @@
                 color: #0085d9;
                 font-family: $font-bold;
                 font-size: .9em;
-                transition: all .2s ease-out;
+                transition: all .25s ease-out;
                 &:hover,
                 &:focus {
                     color: $dark-blue;
@@ -121,6 +121,11 @@
         .connect-info {
             border-right: .5px solid #d1d4d5;
             padding: 0 40px;
+            p {
+                br {
+                    display: none;
+                }
+            }
             form {
                 @include align-left;
             }
