changed bg color of button hover states

--- a/cardinal-mockup/src/scss/partials/_variables.scss
+++ b/cardinal-mockup/src/scss/partials/_variables.scss
@@ -32,7 +32,7 @@ $chhn-background: url("../assets/images/pic-chhn-bg.png");
 /*------------------
 Media Queries
 ------------------*/
-// mobile portrait
+// mobile landscape
 $mobile-landscape: 576px;
 // tablet portrait
 $tablet-portrait: 760px;
