--- a/cardinal-mockup/src/scss/partials/_mixins.scss
+++ b/cardinal-mockup/src/scss/partials/_mixins.scss
@@ -56,10 +56,8 @@
     font-family: $font-regular;
     font-size: $font-small;
     cursor: pointer;
-    transition: all .2s ease-in-out;
-    &:hover {
-        background-color: rgba(255, 255, 255, 0.58);
-    }
+    transition: all .25s ease-in-out;
+    &:hover,
     &:focus {
         background-color: #18203d;
         color: #fff;
@@ -75,11 +73,10 @@
     font-family: $font-regular;
     font-size: $font-small;
     cursor: pointer;
-    transition: all .2s ease-in-out;
+    transition: all .25s ease-in-out;
     &:hover,
     &:focus {
-        color: #fff;
-        background-color: #02467b;
+        background-color: #18203d;
     }
 }
 
