--- a/cardinal-mockup/src/scss/layout/header.scss
+++ b/cardinal-mockup/src/scss/layout/header.scss
@@ -52,7 +52,7 @@
             }
             h2 {
                 @include align-center;
-                @include width-70;
+                @include width-80;
                 line-height: 1.5em;
                 margin: 60px auto 0 auto;
                 font-size: 2.5em;
@@ -66,6 +66,7 @@
         min-height: 380px;
         div {
             h2 {
+                width: 70%;
                 font-size: 2.9em;
                 letter-spacing: 2px;
             }
