--- a/cardinal-mockup/src/scss/layout/connect.scss
+++ b/cardinal-mockup/src/scss/layout/connect.scss
@@ -141,6 +141,11 @@
 @include desktop {
     .connect {
         margin: -70px auto 0 auto;
+        .connect-info {
+            h3 {
+                font-size: 1.7em;
+            }
+        }
         .contact-info {
             padding: 0 60px;
         }
