--- a/cardinal-mockup/src/scss/layout/header.scss
+++ b/cardinal-mockup/src/scss/layout/header.scss
@@ -22,6 +22,7 @@
             line-height: 2em;
             margin: 60px 0 0 0;
             font-size: 1.3em;
+            // text-shadow: 0px 0px #fff;
         }
     }
 }
@@ -90,14 +91,15 @@
 @include desktop {
     .header {
         min-height: 600px;
+        background-position: 75% 100%; 
         div {
             img {
-                width: 9em;
+                width: 11em;
             }
             h2 {
-                font-size: 4em;
+                font-size: 4.5em;
                 letter-spacing: 3px;
-                margin: 125px auto 0 auto;
+                margin: 110px auto 0 auto;
             }
         }
     }
