--- a/cardinal-mockup/src/scss/layout/solutions.scss
+++ b/cardinal-mockup/src/scss/layout/solutions.scss
@@ -92,51 +92,50 @@
         div {
             article {
                 @include align-left;
-                padding: 15px 0;
-                margin: 0 2.5%;
+                padding: 25px 0;
+                margin: 0 1%;
                 img {
-                    width: 2em;
+                    width: 2.5em;
                     float: left;
                 }
                 h3 {
-                    font-size: 1.3em;
+                    font-size: 1.7em;
                     letter-spacing: 1px;
-                    margin: 0 0 12px 50px;
+                    margin: 0 0 15px 55px;
                 }
                 p {
-                    font-size: 1em;
-                    margin: 0 0 12px 50px;
+                    font-size: 1.2em;
+                    margin: 0 0 12px 55px;
                     line-height: 1.7em;
                 }
                 .ba {
-                    width: 1.7em;
+                    width: 2.1em;
                 }
             }
         }
     }
 }
 
-@include large-desktop {
-    .solutions {
-        div {
-            article {
-                margin: 0 2%;
-                img {
-                    width: 2.3em;
-                    float: left;
-                }
-                h3 {
-                    font-size: 1.4em;
-                    margin: 0 0 12px 53px;
-                }
-                p {
-                    font-size: 1em;
-                    margin: 0 0 12px 53px;
-                }
-                .ba {
-                    width: 2em;
-                }
-            }
-        }
-    }
-}
+// @include large-desktop {
+//     .solutions {
+//         div {
+//             article {
+//                 margin: 0 2%;
+//                 // img {
+//                 //     width: 2.3em;
+//                 // }
+//                 // h3 {
+//                 //     font-size: 1.4em;
+//                 //     margin: 0 0 12px 53px;
+//                 // }
+//                 // p {
+//                 //     font-size: 1em;
+//                 //     margin: 0 0 12px 53px;
+//                 // }
+//                 // .ba {
+//                 //     width: 2em;
+//                 // }
+//             }
+//         }
+//     }
+// }
