--- a/cardinal-mockup/src/scss/layout/work.scss
+++ b/cardinal-mockup/src/scss/layout/work.scss
@@ -143,9 +143,9 @@
                 margin: 0 -140px 0 0;
             }
             div {
-                width: 30%;
+                width: 35%;
                 height: 30%;
-                margin: 40px 0 0 60px;
+                margin: 60px 0 0 60px;
                 h3 {
                     margin: 0 auto 5px 0;
                 }
@@ -204,7 +204,7 @@
             div {
                 margin: 140px 0 0 120px;
                 p {
-                    margin: 10px 50px 10px auto;
+                    margin: 10px auto 10px auto;
                 }
             }
         }
@@ -224,14 +224,31 @@
 @include desktop {
     .work {
         article {
+            h3 {
+                font-size: 1.7em;
+            }
+            h4 {
+                font-size: .9em;
+            }
             p {
-                font-size: 1em;
+                font-size: 1.2em;
                 line-height: 1.7em;
+            }
+            button {
+                padding: 15px 35px;
+                font-size: 1.1em;
             }
         }
         .work-gojo {
             div {
                 margin: 80px 0 0 25px;
+                p {
+                    margin: 20px auto;
+                }
+                button {
+                    padding: 15px 35px;
+                    font-size: 1.1em;
+                }
             }
         }
         .work-fifththird {
@@ -240,11 +257,21 @@
                 height: 70%;
                 margin: 0 -240px 0 0;
             }
+            div {
+                p {
+                    margin: 20px auto;
+                }
+            }
         }
         .work-chhn {
             margin: -150px 0 0 0;
             img {
                 margin: -60px 0 0 -300px;
+            }
+            div {
+                p {
+                    margin: 30px auto;
+                }
             }
         }
     }
@@ -252,20 +279,9 @@
 
 @include large-desktop {
     .work {
-        article {
-            h3 {
-                font-size: 1.4em;
-            }
-            button {
-                font-size: .95em;
-            }
-        }
         .work-gojo {
             div {
                 margin: 120px 0 0 25px;
-                button {
-                    font-size: .95em;
-                }
             }
         }
         .work-fifththird {
@@ -276,7 +292,7 @@
         .work-chhn {
             margin: -150px 0 0 0;
             div {
-                margin: 90px 0 0 80px;
+                margin: 40px 0 0 80px;
             }
         }
     }
