--- a/cardinal-mockup/src/scss/layout/clients.css
+++ b/cardinal-mockup/src/scss/layout/clients.css
@@ -129,12 +129,12 @@ Media Queries
       .clients .clients-container .client-info {
         line-height: 1.7em;
         text-align: left;
-        padding: 50px 0 30px 0; }
+        padding: 60px 0 0 0; }
         .clients .clients-container .client-info h3 {
-          font-size: 1.7em;
+          font-size: 1.6em;
           margin: 0 auto 25px auto; }
         .clients .clients-container .client-info p {
-          font-size: 1.2em;
+          font-size: 1.1em;
           line-height: 1.7em; }
       .clients .clients-container .client-logo .fifththird {
         width: 75%; }
