--- a/cardinal-mockup/src/scss/layout/clients.scss
+++ b/cardinal-mockup/src/scss/layout/clients.scss
@@ -136,13 +136,13 @@
             .client-info {
                 line-height: 1.7em;
                 @include align-left;
-                padding: 50px 0 30px 0;
+                padding: 60px 0 0 0;
                 h3 {
-                    font-size: 1.7em;
+                    font-size: 1.6em;
                     margin: 0 auto 25px auto;
                 }
                 p {
-                    font-size: 1.2em;
+                    font-size: 1.1em;
                     line-height: 1.7em;
                 }
             }
@@ -169,19 +169,3 @@
         }
     }
 }
-
-// @include large-desktop {
-//     .clients {
-//         .clients-container {
-//             .client-info {
-//                 padding: 45px 0;
-//                 h3 {
-//                     width: 70%;
-//                 }
-//                 p {
-//                     width: 70%;
-//                 }
-//             }
-//         }
-//     }
-// }
